--- a/uploader.html
+++ b/uploader.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-<form action="http://18.220.196.174:3000/images" method="post" enctype="multipart/form-data">
+<form action="http://localhost:3000/images" method="post" enctype="multipart/form-data">
     <input type="file" name="image">
     <button type="submit">submit</button>
 </form>
